# wildfire-analyser

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: environment-setup.md
examples/: client.py
polygons/: APABarreiroRico.geojson  APACabreuva.geojson  APAMarinhaLitoralCentro.geojson  APASCantareira.geojson  APASerraItapeti.geojson  APATanquaRioPiracicaba.geojson  EEAngatuba.geojson  EEAraraquara.geojson  EEAssis.geojson  EEBananal.geojson  EEBarreiroRico.geojson  EEBauru.geojson  EEBentoQuirino.geojson  EEBuriti.geojson  EECaetetus.geojson  EECantareira.geojson  EECasaBranca.geojson  EEChauas.geojson  EEIbicatu.geojson  EEItabera.geojson  EEItapeninga.geojson  EEItapeva.geojson  EEItapevi.geojson  EEItarare.geojson  EEItirapina.geojson  EEJau.geojson  EEJoaoJoseGalhardoEExParaguacuPaulista.geojson  EEJureiaItatins.geojson  EELuizAntonio.geojson  EEMogiGuacu.geojson  EEMogiMirim.geojson  EENoroestePaulista.geojson  EEParanapanema.geojson  EEPauloFaria.geojson  EERiberaoPreto.geojson  EESantaBarbara.geojson  EESantaRitaPassaQuatro.geojson  EESaoJoseRioPreto.geojson  EESaoSimao.geojson  EESebastiaoAleixoSilva.geojson  (+91 more)
src/: assessment_runner.py  image_selector.py
web/: before_after_map.html
wildfire_analyser/: .env.template  __init__.py  client.py
wildfire_analyser/fire_assessment/: auth.py  deliverable_dependencies.py  deliverables.py  dependencies.py  dependency_graph.py  dependency_resolver.py  gee_client.py  geometry_loader.py  post_fire_assessment.py  products.py  resolver.py  sentinel2.py  time_windows.py  validators.py
(+8 files in other folders)
